# ICRA_guard

./: CMakeLists.txt  README.md  main.cpp  switch_function.h
MLP_pose/: MLP_pose.cpp  MLP_pose.h
camera/inc/: StreamRetrieve.h  camParaConfig.h  daHuaCam.hpp  shm.hpp  startFetch.hpp
camera/src/: CMakeLists.txt  camParaConfig.cpp  cam_mode.cpp  shm.cpp  startFetch.cpp  streamRetrieve.cpp
camera_pose/: tag_and_camera.cpp  tag_and_camera.h
camera_pose/abandon/: detect_blob.cpp  detect_blob.h
cfg/: daHuaCamConfig.yml  guard_camera_config.yml  guard_config.yml
init/include/: init.h
init/src/: init.cpp
mytool/: camera_MLP_get.cpp  ros_mat.cpp  test_mouse.cpp
others/: small_tool.cpp  small_tool.h
socket/: client.cpp  client.h
socket/server/: server.cpp  sever
yolov5/include/: detect_yolo.h
yolov5/src/: detect_yolo.cpp
yolov5/weights/: my.names
